--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chicle&display=swap" rel="stylesheet">
-    <title>Vite App</title>
+    <title>Summer Blowout Richmond 2k22</title>
   </head>
   <body class="h-full">
     <div id="app" class="h-full"></div>
